# decision_infovalue

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
R/: analysis.Rmd
R/experiment_data/: exp_df_real_exp.csv
data/: AmesHousing.csv  CXRForecasting.csv  house_price_human.csv
decision_infovalue/: __init__.py  datasets.py
decision_infovalue/model/: __init__.py  core.py
decision_infovalue/rational_agent/: __init__.py  _rational_agent.py
decision_infovalue/scoring_rules/: __init__.py  _scoring_rule.py
doc/: decision_infovalue.html  index.html  search.js
doc/decision_infovalue/model/: core.html
notebooks/deepfake-example/: deepfake_unexploited_infovalue.ipynb
notebooks/house-price-example/: house_pricing.ipynb  survey_data.csv
notebooks/mimic-iv-CXR-example/: cxr_human_ai_complementary.ipynb
notebooks/observational-study/: observational_study.ipynb
notebooks/recidivism-example/: recidivism_prediction.ipynb
tests/: __init__.py  conftest.py  test_datasets.py  test_decision_info_model.py  test_version.py
